# email_signature_remover

./: README.md  pyproject.toml
src/convosense_utilities/: email_signature_remover.py
src/convosense_utilities.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
